failed assertion in ISAKMP dissector (proto.c:4002)
This issue was migrated from bug 5500 in our old bug tracker.
Original bug information:
Reporter: Kevin Fall
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: All
Version: Git
Attachments:
ikew7cli.td: tcpdump IKEv2 trace file including fragment; error starting w/pkt #4
: screen shot of decode error
isakmp_bug5500.patch: Patch to fix a typo error....
svn.diff: Patch to avoid the error