Fix  Bug 5500 - failed assertion in ISAKMP dissector (proto.c:4002) By reinseringt the check in proto_tree_move_item() if tree vissible removed in http://anonsvn.wireshark.org/viewvc?view=rev&revision=32443 Hopefully not breaking tshark again.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5500

svn path=/trunk/; revision=35817